# vitabright

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_lookup.py  custom_lut.h  log.c  log.h  lookupOrig.c  lut.h  main.c  main.h  module.yml  parser.c  parser.h  vitabright.yml  vitabright_lut_example.txt
assets/: lookupOrig.txt  vitabright_lut_orig.txt
extra/: extra.yml
lcd/: build_values.py  hooks.c  hooks.h
net/: cmd.c  cmd.h  net.c  net.h
oled/: hooks.c  hooks.h  parser.h
oled/assets/: vitabright_lut.txt
oled/luts/orig/: vitabright_lut_4_orig.txt  vitabright_lut_5_orig.txt  vitabright_lut_orig.txt
